--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
-  "name": "yunti",
+  "name": "fastping",
   "version": "1.0.0",
-  "description": "",
+  "description": "Find the fastest server by mean ping time",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel fastping.js -o dist/fastping.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "homepage": "https://github.com/wongyouth/fastping",
+  "keywords": [
+    "vpn",
+    "server",
+    "ping"
+  ],
+  "author": "Ryan Wang",
+  "license": "MIT",
+  "bin": {
+    "fastping": "index.js"
+  },
   "dependencies": {
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
-    "lodash": "^4.17.2"
+    "lodash": "^4.17.2",
+    "minimist": "^1.2.0"
   },
   "devDependencies": {
     "babel-preset-stage-2": "^6.18.0"
