--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
     "lodash": "^4.17.2",
-    "minimist": "^1.2.0"
+    "yargs": "^6.5.0"
   },
   "devDependencies": {
     "babel-preset-stage-2": "^6.18.0"
